# tvtime-rescue-data

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  README.pl.md  REDDIT_POST.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: build.yml
docs/: exporting.md  finder-mac.md  imazing.md  windows-apple-devices.md
scripts/: START-HERE-Linux.sh  START-HERE-Mac.command  START-HERE-Windows.bat  build_exe.py
tests/: test_enrich.py  test_exporters.py  test_parse.py
tvtime_rescue/: __init__.py  cli.py  enrich.py  parse.py  site.py
tvtime_rescue/exporters/: __init__.py  base.py  imdb.py  json_export.py  letterboxd.py  simkl.py  trakt.py
tvtime_rescue/extract/: __init__.py  backup.py
tvtime_rescue/viewer/: __init__.py  site.py
